picturas-chart/templates/ws-gateway/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ws-gateway-metrics
spec:
  type: ClusterIP
  ports:
    - name: http-metrics
      port: 9121
      targetPort: 9113
  selector:
    name: ws-gateway
