picturas-chart/templates/ws-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ws-gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
    - http:
        paths:
          - path: /api/ws(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ws-gateway
                port:
                  number: 3000
